--- a/data/blog/backend.mdx
+++ b/data/blog/backend.mdx
@@ -117,7 +117,7 @@ APIs allow programs to talk to each other. [REST](https://restfulapi.net/) and [
 `GET` request to fetch the number of views for a blog post.
 
 ```bash
-$ curl https://aranganathan.vercel.app/api/page-views?id=databases
+$ curl https://aranga.in/api/page-views?id=databases
 
 { "total": 1234 }
 ```
