--- a/pdf/resume.tex
+++ b/pdf/resume.tex
@@ -6,7 +6,7 @@
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 \photo[circle,noedge]{./public/aranganathan.jpg}
 \name{Aranganathan}{Rathinavelu }
-\position{Fullstack Engineer}
+\position{Software Engineer}
 \address{Eindhoven, North Brabant, Netherlands}
 \mobile{(+31) 644249247}
 \email{hello@aranga.in}
