--- a/pdf/resume.tex
+++ b/pdf/resume.tex
@@ -7,7 +7,7 @@
 \photo[circle,noedge]{./public/aranganathan.jpg}
 \name{Aranganathan}{Rathinavelu }
 \position{Software Engineer}
-\address{Eindhoven, North Brabant, Netherlands}
+\address{'s-Hertogenbosch, North Brabant, Netherlands}
 \mobile{(+31) 644249247}
 \email{hello@aranga.in}
 \homepage{aranga.in}
