--- a/pdf/sections/experience.tex
+++ b/pdf/sections/experience.tex
@@ -81,7 +81,7 @@
 
   \cventry
     {Frontend Developer}
-    {Examly}
+    {iamneo (Formerly Examly)}
     {Bengaluru, Karnataka, India}
     {Jun. 2016 - Jul. 2017}
     {
