--- a/pdf/sections/skills.tex
+++ b/pdf/sections/skills.tex
@@ -12,22 +12,22 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JavaScript, Typescript, Node.js, Python, LaTeX} % Skills
+    {JavaScript, Typescript, Python} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Front-end} % Category
+    {Frontend} % Category
     {React, Redux, HTML5, SASS, NextJS, TailwindCSS, Webpack, SEO} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
+    {Backend} % Category
     {Django, DRF, REST API, Redis, Celery} % Skills
     
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {Linux, AWS, Docker, Gitlab CI/CD} % Skills
+    {Linux, Docker, Gitlab CI/CD} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
