--- a/pdf/coverletter.tex
+++ b/pdf/coverletter.tex
@@ -8,8 +8,8 @@
 
 \photo[circle,noedge]{./public/aranganathan.jpg}
 \name{Aranganathan}{Rathinavelu }
-\position{Fullstack Engineer}
-\address{Eindhoven, North Brabant, Netherlands}
+\position{FullStack Engineer}
+\address{‘s-Hertogenbosch, North Brabant, Netherlands}
 
 \mobile{(+31) 644249247}
 \email{hello@aranga.in}
@@ -29,13 +29,38 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-I came across your Senior Software Engineer role on Honest Work and I was fascinated by how you’re applying machine learning to the burger industry. Having spent the past 15 years consuming burgers whilst earning a living writing python, I think this is a wonderful opportunity to marry my skills with my passion and join a disruptive BurgerTech organisation.
+As someone with a lifetime love of relational mathematics and pattern recognition, I thrive on digging
+into complex datasets and producing insightful, data-driven strategic recommendations. Throughout my
+career, I have enjoyed working in multiple domains such as Product Analytics, Growth Marketing and
+Customer Intelligence.
+I never limit my work from data within “modeling” and “reporting”. I strive to translate the work to
+achieve core business values. In my current and previous roles, I recommended methods to improve
+product features for user retention, implemented new processes for defining product life cycles, optimized
+marketing spends, developed a personalized product recommender engine, and assisted with several
+stages of data-driven decision making that resulted in new capabilities of growth in the organization. I
+have worked on several strategic projects, and the experience has prepared me to launch my own
+initiatives and lead change.
 
-\lettersection{Why John Deere?}
-I came across your Senior Software Engineer role on Honest Work and I was fascinated by how you’re applying machine learning to the burger industry. Having spent the past 15 years consuming burgers whilst earning a living writing python, I think this is a wonderful opportunity to marry my skills with my passion and join a disruptive BurgerTech organisation.
+\lettersection{Why ABN AMRO?}
+● It gives a unique opportunity to comprehensively develop expertise in the complete spectrum of
+data science, by providing a chance to work on a variety of business situations.
+● I truly enjoy interacting with stakeholders and designing data-driven solutions. Throughout my
+work experience I have built a successful track record of developing solutions and maintaining
+relationships with internal/external stakeholders such as the Senior Leadership Team at Cisco and
+the Product Team at Shopify. Hence the opportunity at ABN AMRO would offer me a niche work
+experience.
 
 \lettersection{Why Me?}
-I have spent the past few years working for a company where I was able to significantly improve my python experience, working on large scale applications whilst surrounded by a fantastic team of engineers. Most recently, I started working on backend development on a major project where I had the opportunity to learn from a great team of 5 engineers to deliver a critical new feature for the platform which resulted in a significant increase in revenue.
+Based on my personal and professional experiences, I can bring to ABN AMRO the following:
+● be a practical problem solver; I can develop frameworks for solving problems, which will allow
+for quickly defining, diagnosing, and resolving issues.
+● deal with complex data of varying quality; I excel with big ideas when put with constraints.
+● deliver trustworthy solutions to production; I can successfully run champion-challenger tests and
+produce a ‘minimum-lovable’ model/report with deeper insights.
+● pick-up domain/industry understanding quickly; I thrive to talk the language and map problems to
+solutions and,
+● have meaningful dialogue with business stakeholders; I can continually monitor expectations, and
+remain responsive to their needs and opinions.
 
 Thank you for considering my application and hopefully we’ll speak soon.
 \end{cvletter}
