--- a/pdf/coverletter.tex
+++ b/pdf/coverletter.tex
@@ -1,14 +1,12 @@
 \documentclass[11pt, a4paper]{awesome-cv}
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
 \fontdir[fonts/]
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-darknight}
 \setbool{acvSectionColorHighlight}{true}
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
-
 \photo[circle,noedge]{./public/aranganathan.jpg}
 \name{Aranganathan}{Rathinavelu }
-\position{FullStack Engineer}
 \address{‘s-Hertogenbosch, North Brabant, Netherlands}
 
 \mobile{(+31) 644249247}
@@ -32,14 +30,22 @@
 As someone with a lifetime love of relational mathematics and pattern recognition, I thrive on digging
 into complex datasets and producing insightful, data-driven strategic recommendations. Throughout my
 career, I have enjoyed working in multiple domains such as Product Analytics, Growth Marketing and
-Customer Intelligence.
-I never limit my work from data within “modeling” and “reporting”. I strive to translate the work to
+Customer Intelligence.I never limit my work from data within “modeling” and “reporting”. I strive to translate the work to
 achieve core business values. In my current and previous roles, I recommended methods to improve
 product features for user retention, implemented new processes for defining product life cycles, optimized
 marketing spends, developed a personalized product recommender engine, and assisted with several
 stages of data-driven decision making that resulted in new capabilities of growth in the organization. I
 have worked on several strategic projects, and the experience has prepared me to launch my own
 initiatives and lead change.
+
+
+As an electronics engineering student i developed a great interest towards Embedded systems.I underwent 6 week training program and i found the subject very stimulating.It involved a great deal of independent research to self-learn Arduino and Raspberry-Pi and i have hands-on experience in working with them.As part of my role as programmer in my college clubs i learned NodeJS and Python.More than an year I have been working on Internet of Things.Hackathons are the way through which i developed a great interest in Internet of Things.My experiences from hackathons has prepared me for doing projects like tracking the location of college buses and remote patient monitoring wearable using Node-Red programming and IBM bluemix as web platform.
+my final year project is Remote monitoring of 3 phase Induction motor from which i learned to build webapps using Google Polymer and Cordova The key aspects of my background apart from IoT enthusiast are Embedded software development, web development and Industrial automation.
+The enclosed resume can serve as a more detailed view of my skills ,accomplishments,and what i have to offer to your company .If you have questions or need more information, you may reach me through the phone number or email below.I look forward to having the chance to ​exhibit my knowledge in Internet of Things​.I have the enthusiasm and determination to ensure that I make a success of it.
+
+Thank you for your time and consideration.
+
+
 
 \lettersection{Why ABN AMRO?}
 ● It gives a unique opportunity to comprehensively develop expertise in the complete spectrum of
@@ -52,15 +58,13 @@ experience.
 
 \lettersection{Why Me?}
 Based on my personal and professional experiences, I can bring to ABN AMRO the following:
-● be a practical problem solver; I can develop frameworks for solving problems, which will allow
-for quickly defining, diagnosing, and resolving issues.
-● deal with complex data of varying quality; I excel with big ideas when put with constraints.
-● deliver trustworthy solutions to production; I can successfully run champion-challenger tests and
-produce a ‘minimum-lovable’ model/report with deeper insights.
-● pick-up domain/industry understanding quickly; I thrive to talk the language and map problems to
-solutions and,
-● have meaningful dialogue with business stakeholders; I can continually monitor expectations, and
-remain responsive to their needs and opinions.
+* Responsible for the development of new and the refinement of current features to enhance our end to end client proposition.
+* Working with other Developers, Product teams and customer facing teams to define the right approach to solutions including the presentation of architecture / design strategies.
+* Collaborate with the QA team to test and optimise features developed, as well as adding to our automated testing suites.
+* Working closely with the product team to spec out new features and generate new proposed strategies.
+* Working collaboratively using agile methodologies and elements of scrum.
+* Mentoring junior Developers supporting their growth
+* Play an important part in the sharing of knowledge within the Development team and contributing technical showcases
 
 Thank you for considering my application and hopefully we’ll speak soon.
 \end{cvletter}
