--- a/pdf/sections/experience.tex
+++ b/pdf/sections/experience.tex
@@ -9,10 +9,10 @@
     {
       \begin{cvitems}
         \item {Implemented Complete redesign of User facing dashboard using customised Ant design system.}
-        \item {Worked with multiple Design systems such as Ant Design, Material Design and custom design using SASS.}
         \item {Collaborated with the QA team to test and optimise features developed, as well as adding E2E Cypress to our automated testing suites.}
         \item {Improved accessibility by implementing Theming(Dark mode), Internalization, Site wide search(Cmd + K).}
         \item {Integrated Sentry error reporting,ESLint, prettier and Git hooks for maintaining consistent code base.}
+        \item {Worked with multiple Design systems such as Ant Design, Material Design and custom design using SASS.}
         \item {Completely responsible for delivering 3 projects(Internal dashboard, Email campaign, Automated Invoicing).}
         \item {Fully Responsible for building core components, Visualization of Time series data, E2E testing, CI/CD pipelines and frontend deployments.}
       \end{cvitems}
@@ -81,7 +81,7 @@
 
   \cventry
     {Frontend Developer}
-    {iamneo (Formerly Examly)}
+    {Examly}
     {Bengaluru, Karnataka, India}
     {Jun. 2016 - Jul. 2017}
     {
